Fix Bug 436880 - Kmail ignores right-to-left text direction

BUG: 436880
FIXED-IN: 17.04.2